overlays/app_secrets_nginx/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpbin
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - READACTED # Put public ip address 172.217.167.142 or the host DNS
    secretName: httpbin-tls
  rules:
  - host: REDACTED
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 8000
